LPS-40429 - Fix wide content overflowing in narrow columns

--- a/portal-web/docroot/html/css/taglib/search_iterator.css
+++ b/portal-web/docroot/html/css/taglib/search_iterator.css
@@ -1,6 +1,10 @@
 @import "compass";
 @import "mixins";
 
+.lfr-search-container {
+	overflow: auto;
+}
+
 .taglib-search-iterator {
 	border-collapse: collapse;
 	width: 100%;
